# xfig

./: .gitignore  CHANGES  CompKeyDB  HACKING  INSTALL  Makefile.am  TOdo  configure.ac  update-version_m4  version.m4  xfig.desktop
app-defaults/: Fig  Fig.in
archlinux/: PKGBUILD
doc/: FORMAT3.2  Makefile.am  xfig.man.in  xfig_man.html.in
doc/html/: accelerators.html  attributes.html  drawing.html  editing.html  faq.html  i18n.html  installation.html  introduction.html  latex_and_xfig.html  main_menus.html  miscellaneous.html  new_features.html  options.html  printing.html
m4/: ax_check_link_flag.m4
src/: Makefile.am  SmeBSB.c  SmeCascade.c  SmeCascade.h  d_text.c  d_text.h  e_align.c  e_chop.c  e_compound.c  e_compound.h  e_copy.c  e_delete.c  e_edit.c  e_edit.h  e_glue.c  e_joinsplit.c  e_placelib.c  e_rotate.c  e_scale.c  e_tangent.c  e_update.c  f_load.c  f_picobj.c  f_picobj.h  f_read.c  f_read.h  f_readeps.c  f_readgif.c  f_readjpg.c  f_readold.c  f_readpcx.c  f_readpcx.h  f_readpng.c  f_readppm.c  f_readtif.c  f_readxbm.c  f_readxpm.c  f_save.c  f_save.h  f_util.c  (+125 more)
tests/: Makefile.am  atlocal.in  test1.c  test2.c  test4.c  testsuite.at
